--- a/start/templates/start/generic.html
+++ b/start/templates/start/generic.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base_site.html' %}
 
-{% load static %}
+{% load i18n static %}
 
 {% block extrahead %}
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'start/img/equinox.png' %}"/>
