--- a/reporting/templates/portfolio_map.html
+++ b/reporting/templates/portfolio_map.html
@@ -1,5 +1,5 @@
 {% extends "start/generic.html" %}
-{% load static %}
+{% load i18n static %}
 {% load custom_tags %}
 {% load humanize %}
 {% load leaflet_tags %}
@@ -12,7 +12,7 @@
 {% block extrahead %}
     {{ block.super }}
     {% leaflet_css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/map.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'portfolio/css/map.css' %}">
     {% leaflet_js %}
 {% endblock %}
 
@@ -39,11 +39,7 @@
 
 {% block content %}
 
-    <div class="col-12">
-
-
         <div class="card card-primary card-outline">
-
 
             <div class="card-header">
                 <h4>Map of Area Sources</h4>
@@ -52,11 +48,8 @@
             <div class="card-body">
                 {{ geometry|json_script:"geometry" }}
                 <div id="map"></div>
-                <script src="{% static 'portfolio/map.js' %}"></script>
-
+                <script src="{% static 'portfolio/js/map.js' %}"></script>
             </div>
         </div>
-
-    </div>
 
 {% endblock %}
