--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -276,7 +276,7 @@
                     <div class="container-fluid">
                         <div class="row mb-2">
                             <div class="col-auto col-sm-3">
-                                <h2 class="m-0">{% block content_title %}TEST{% endblock %}</h2>
+                                <h2 class="m-0">{% block content_title %}{% endblock %}</h2>
                             </div>
                             <div class="col-auto col-sm-9">
                                 {% block breadcrumbs %}{% endblock %}
