--- a/templates/admin/topbar.html
+++ b/templates/admin/topbar.html
@@ -7,9 +7,11 @@
         <li><a class="dropdown-item" href="/reporting/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
         <li><a class="dropdown-item" href="/reporting/portfolio_map">Portfolio Map</a></li>
         <li><a class="dropdown-item" href="/reporting/gpp_report">GPP Report</a></li>
+        {% comment 'TODO' %}
         <li><a class="dropdown-item" href="/reporting/portfolio_aggregates">Portfolio Aggregates</a></li>
         <li><a class="dropdown-item" href="/reporting/portfolio_summary">Portfolio Summary</a></li>
-    </ul>
+        {% endcomment %}
+        </ul>
 </li>
 
 <li class="nav-item d-none d-sm-inline-block dropdown">
