--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -12,26 +12,24 @@
 {% block content %}
 
     <div class="card card-primary card-outline">
-        <div class="image">
-            <img src="{% static 'start/img/equinox-large.png' %}" height="100" alt="Equinox Logo"/>
-        </div>
-        <div class="text">
-            <h3>{% trans "Equinox is an open source platform that supports the holistic risk management of sustainable finance portfolios" %}</h3>
-        </div>
-    </div>
+        <div class="card-body">
+            <div class="attachment-block clearfix">
 
-    <div class="card card-primary card-outline">
-        <div class="card-body pad table-responsive">
-            <ul>
-                <li>Equinox <a href="{% url 'start:DocList' %}">Documentation Pages</a></li>
-                <li>Sustainable Portfolio Management <a href="{% url 'start:Concepts' %}">Concepts</a></li>
-            </ul>
+                <img class="attachment-img" src="{% static 'start/img/equinox-large.png' %}" height="100"
+                     alt="Equinox Logo"/>
+                <div class="attachment-pushed">
+                    <h4 class="attachment-heading">Welcome to Equinox</h4>
+                    <div class="attachment-text">
+                        {% trans "Equinox is an open source platform that supports the holistic risk management of sustainable finance portfolios" %}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="card card-info">
         <div class="card-header">
-            <h4>{% trans "Welcome to Equinox" %}</h4>
+            <h4>{% trans "About" %}</h4>
         </div>
 
         <div class="card-body">
@@ -43,9 +41,11 @@
                 <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory requirements, protocols and recommendations and financial industry initiatives.
             </p>
         </div>
+        {% comment 'TODO' %}
         <div class="card-footer">
             The footer of the card
         </div>
+        {% endcomment %}
     </div>
 
     <div class="card card-info">
@@ -70,8 +70,17 @@
 
             <p>Once the platform is up and running a wealth of functionality is available.</p>
         </div>
-        <div class="card-footer">
-            The footer of the card
+    </div>
+
+    <div class="card card-primary card-outline">
+        <div class="card-header">
+            <h4>Learn More</h4>
+        </div>
+        <div class="card-body pad table-responsive">
+            <ul>
+                <li>Equinox <a href="{% url 'start:DocList' %}">Documentation Pages</a></li>
+                <li>Sustainable Portfolio Management <a href="{% url 'start:Concepts' %}">Concepts</a></li>
+            </ul>
         </div>
     </div>
 
@@ -127,6 +136,7 @@
         </div>
     </div>
 
+    {% comment 'TODO' %}
     <div class="card bg-gradient-success card-info">
         <div class="card-header">
             <h3 class="card-title">Default Card Example</h3>
@@ -185,6 +195,7 @@
             <i class="fas fa-clock bg-gray"></i>
         </div>
     </div>
+    {% endcomment %}
 
 
 {% endblock %}
