--- a/templates/admin/footer_internal.html
+++ b/templates/admin/footer_internal.html
@@ -10,10 +10,7 @@
 
             <div class="col-sm-3">
                 <ul id="menu-documentation-menu" class="menu">
-                    <li><a href="{{ root_view }}/about">About Equinox</a></li>
-                    <li><a href="{{ root_view }}/help">FAQ</a></li>
-                    <li><a href="{{ root_view }}/documentation">Documentation</a></li>
-                    <li><a href="{{ root_view }}/concepts">CPM Concepts</a></li>
+                    <li><a href="https://www.openriskmanagement.com/equinox/">User Documentation</a></li>
                 </ul>
             </div>
 
