--- a/reporting/templates/ghg_reduction.html
+++ b/reporting/templates/ghg_reduction.html
@@ -1,4 +1,4 @@
-{% extends "start/tabule.html" %}
+{% extends "start/tabular.html" %}
 {% load static %}
 {% load custom_tags %}
 {% load humanize %}
