--- a/reporting/templates/pcaf_mortgage_report.html
+++ b/reporting/templates/pcaf_mortgage_report.html
@@ -1,5 +1,5 @@
 {% extends "start/tabular.html" %}
-{% load static %}
+{% load i18n static %}
 {% load custom_tags %}
 {% load humanize %}
 
@@ -16,7 +16,6 @@
 {% block content %}
 
     <div class="card card-primary card-outline">
-
         <div class="card-body pad table-responsive">
 
 
