--- a/policy/templates/policy/dataseries_metrics.html
+++ b/policy/templates/policy/dataseries_metrics.html
@@ -1,4 +1,4 @@
-{% extends "start/generic.html" %}
+{% extends "start/tabular.html" %}
 {% load i18n static %}
 {% load custom_tags %}
 {% load humanize %}
