--- a/policy/templates/policy/ds_breadcrumb.html
+++ b/policy/templates/policy/ds_breadcrumb.html
@@ -24,7 +24,7 @@
      <span><a title="Metrics" href="{% url 'policy:Metrics' object.identifier %}"><i
              class="fa fa-thermometer fa-2x"></i></a></span>
      <span><a title="Plot" href="{% url 'policy:Plot' object.identifier %}"><i
-             class="fa fa-area-chart fa-2x"></i></a></span>
+             class="fas fa-chart-area fa-2x"></i></a></span>
      </span>
     </div>
 </div>
