--- a/start/templates/start/front.html
+++ b/start/templates/start/front.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="card-body">
-            <p>The Equinox platform focus on the challenge of Sustainable Portfolio Management</p>
+            <p>Equinox is an open source platform focused on the challenge of Sustainable Portfolio Management</p>
 
             <p>Sustainability (both environmental and social) is a major issue that affects all economies. Developing tools and methodologies that improve the ability of all stakeholders to assess and report risks is an important objective and Equinox aims to help carry out this process as optimally as possible.</p>
 
@@ -41,11 +41,6 @@
                 <i>data schema</i> to provide easy access to sustainability data adhering to both regulatory requirements, protocols and recommendations and financial industry initiatives.
             </p>
         </div>
-        {% comment 'TODO' %}
-        <div class="card-footer">
-            The footer of the card
-        </div>
-        {% endcomment %}
     </div>
 
     <div class="card card-info">
