expand portfolio map views; add further documentation to README

--- a/reporting/templates/portfolio_map.html
+++ b/reporting/templates/portfolio_map.html
@@ -42,7 +42,7 @@
         <div class="card card-primary card-outline">
 
             <div class="card-header">
-                <h4>Map of Portfolio Sources</h4>
+                <h4>Portfolio Map</h4>
             </div>
 
             <div class="card-body">
