--- a/templates/admin/topbar.html
+++ b/templates/admin/topbar.html
@@ -7,7 +7,8 @@
         <li class="dropdown-header">Reports</li>
         <li><a class="dropdown-item" href="/reporting/gpc_report">GPC Report</a></li>
         <li><a class="dropdown-item" href="/reporting/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
-        <li><a class="dropdown-item" href="/reporting/portfolio_map">Portfolio Map</a></li>
+        <li><a class="dropdown-item" href="/reporting/contractor_nuts3_map">Contractor Portfolio Map</a></li>
+        <li><a class="dropdown-item" href="/reporting/manager_nuts3_map">Manager Portfolio Map</a></li>
         <li><a class="dropdown-item" href="/reporting/gpp_report">GPP Report</a></li>
         {% comment 'TODO' %}
         <li><a class="dropdown-item" href="/reporting/portfolio_aggregates">Portfolio Aggregates</a></li>
