portfolio models cleanup of FK's

--- a/reporting/templates/portfolio_overview.html
+++ b/reporting/templates/portfolio_overview.html
@@ -20,7 +20,7 @@
 
     <div class="card-info">
         <div class="card-header">
-            <h4>Procurement Data</h4>
+            <h4>Procurement Footprint Overview</h4>
         </div>
         <div class="card-body">
             <table id="data_list" class="display responsive">
@@ -40,20 +40,28 @@
                     <td>{{ po_count }}</td>
                 </tr>
                 <tr>
-                    <td>Emissions Sources</td>
-                    <td>{{ gpp_count }}</td>
-                </tr>
-                <tr>
-                    <td>Contractors</td>
-                    <td>{{ co_count }}</td>
-                </tr>
-                <tr>
                     <td>Projects</td>
                     <td>{{ pr_count }}</td>
                 </tr>
                 <tr>
                     <td>Project Activities</td>
                     <td>{{ pa_count }}</td>
+                </tr>
+                <tr>
+                    <td>Project Assets</td>
+                    <td>{{ as_count }}</td>
+                </tr>
+                <tr>
+                    <td>Emissions Sources</td>
+                    <td>{{ gpp_count }}</td>
+                </tr>
+                <tr>
+                    <td>Spatial Sources</td>
+                    <td>{{ geo_count }}</td>
+                </tr>
+                <tr>
+                    <td>Contractors</td>
+                    <td>{{ co_count }}</td>
                 </tr>
                 </tbody>
             </table>
