--- a/reporting/templates/portfolio_overview.html
+++ b/reporting/templates/portfolio_overview.html
@@ -44,6 +44,10 @@
                     <td>{{ pr_count }}</td>
                 </tr>
                 <tr>
+                    <td>Project Events</td>
+                    <td>{{ pe_count }}</td>
+                </tr>
+                <tr>
                     <td>Project Activities</td>
                     <td>{{ pa_count }}</td>
                 </tr>
