--- a/start/static/start/css/jazzmin.css
+++ b/start/static/start/css/jazzmin.css
@@ -15,6 +15,19 @@
   color: #fff;
 }
 
+/*.dark-mode .select2-results {*/
+/*    color: #f5f7f9 !important;*/
+/*    background-color: #393e43 !important;*/
+/*}*/
+
+
+/*.select2-container--default  .select2-selection__rendered {*/
+/*    margin-top: 0;*/
+/*    background-color: #393e43;*/
+/*    color: #fff;*/
+/*}*/
+
+
 /*.select2-container--open .select2-dropdown {*/
 /*    display: inline !important;*/
 /*}*/
