Doc updates for apps; Cleanup model server dir; Fix various CPA Sector parsing edge cases for emissions profile

--- a/reporting/templates/reporting/gpp_report.html
+++ b/reporting/templates/reporting/gpp_report.html
@@ -58,7 +58,7 @@
 
         <script>
             $('#data_list').DataTable({
-                "pagingType": "full_numbers",
+                "bPaginate": true,
                 "responsive": true,
                 "bSort": true,
                 "displayLength": 50,
