--- a/templates/admin/topbar.html
+++ b/templates/admin/topbar.html
@@ -9,6 +9,7 @@
         <li><a class="dropdown-item" href="/reporting/pcaf_mortgage_report">PCAF Mortgage Report</a></li>
         <li><a class="dropdown-item" href="/reporting/contractor_nuts3_map">Contractor Portfolio Map</a></li>
         <li><a class="dropdown-item" href="/reporting/manager_nuts3_map">Manager Portfolio Map</a></li>
+        <li><a class="dropdown-item" href="/reporting/project_nuts3_map">Project Portfolio Map</a></li>
         <li><a class="dropdown-item" href="/reporting/gpp_report">GPP Report</a></li>
         {% comment 'TODO' %}
         <li><a class="dropdown-item" href="/reporting/portfolio_aggregates">Portfolio Aggregates</a></li>
