aggregated statistics visualizations and portfolio map with custom markers

--- a/reporting/templates/reporting/portfolio_map.html
+++ b/reporting/templates/reporting/portfolio_map.html
@@ -48,7 +48,7 @@
             <div class="card-body">
                 {{ geodata|json_script:"geodata" }}
                 <div id="map"></div>
-                <script src="{% static 'portfolio/js/map.js' %}"></script>
+                <script src="{% static 'portfolio/js/large-map.js' %}"></script>
             </div>
         </div>
 
