--- a/reporting/templates/reporting/portfolio_stats_view.html
+++ b/reporting/templates/reporting/portfolio_stats_view.html
@@ -1,64 +1,38 @@
-{% extends "start/generic.html" %}
+{% extends "start/tabular.html" %}
 {% load static %}
 {% load custom_tags %}
 {% load humanize %}
-{% comment %}{% endcomment %}
 
 {% block title %}
     {{ title }} Portfolio Statistics
 {% endblock %}
 
-{% block extrahead %}
-    {{ block.super }}
-    <script type="text/javascript" charset="utf-8"
-            src="{% static 'start/js/datatables/media/js/jquery.dataTables.js' %}"></script>
-{% endblock %}
-
-{% block extrastyle %}
-    {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'start/css/datatables/demo_table.css' %}">
-{% endblock %}
-
-{% block messages %}
-    <div class="helpblock">
-        <p><i class="fa fa-bar-chart"></i> The portfolio statistics view provides an analysis of portfolio data by aggregating along key dimensions</p>
-    </div>
-{% endblock %}
-
-{% block breadcrumbs %}
-    {# include "portfolio_explorer/root_breadcrumb.html" #}
-{% endblock %}
 
 {% block content %}
 
-    <div id="page" class="container-responsive">
+    <div class="card card-primary card-outline">
+        <div class="card-body">
+            <div class="helpblock">
+                <p>Portfolio Overview</p>
+            </div>
+        </div>
+    </div>
 
+    {% for name, view in stats_view.items %}
+        <div class="card card-info">
 
-        <div class="row">
-            <div class="col-sm-12">
+            <div class="card-header">
+                <h4> Distribution by {{ name }} attribute </h4>
+            </div>
 
-                <div>
-                    <h3> Portfolio Data for <i>{{ portfolio.name}}</i> Grouped By Attribute </h3>
-                </div>
+            <div class="card-body">
+
+                {{ view | safe }}
 
             </div>
         </div>
 
-        {% for name, view in stats_view.items %}
+    {% endfor %}
 
-
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="content-block">
-                        <h4> Distribution by the {{ name }} attribute </h4>
-                        {{ view | safe }}
-                    </div>
-                </div>
-            </div>
-
-        {% endfor %}
-
-
-    </div>
 
 {% endblock %}
